--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,12 @@
   </head>
   <body ng-controller="mainController as mainCtrl" ng-cloak>
     <input ng-model="mainCtrl.searchInput" type="text" />
+    <ul>
+      <li ng-repeat="result in mainCtrl.searchResults">{{ result.Text_value }}</li>
+    </ul>
     <script src="/node_modules/angular/angular.min.js" type="text/javascript"></script>
+    <script src="/node_modules/js-search/dist/js-search.min.js" type="text/javascript"></script>
+    <script src="/node_modules/underscore/underscore-min.js" type="text/javascript"></script>
     <script src="/public/js/app.js" type="text/javascript"></script>
   </body>
 </html>
