--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/public/styles/main.css">
+    <link rel="stylesheet" href="/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/main.css">
   </head>
   <body ng-controller="mainController as mainCtrl" ng-cloak>
     <div class="container">
@@ -44,9 +44,9 @@
         </table>
       </div>
     </div>
-    <script src="/node_modules/angular/angular.min.js" type="text/javascript"></script>
-    <script src="/node_modules/js-search/dist/js-search.min.js" type="text/javascript"></script>
-    <script src="/node_modules/underscore/underscore-min.js" type="text/javascript"></script>
-    <script src="/public/js/app.js" type="text/javascript"></script>
+    <script src="/js/angular.min.js" type="text/javascript"></script>
+    <script src="/js/js-search.min.js" type="text/javascript"></script>
+    <script src="/js/underscore-min.js" type="text/javascript"></script>
+    <script src="/js/app.js" type="text/javascript"></script>
   </body>
 </html>
