--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/styles/main.css">
-    <script src="/js/angular.min.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="/public/styles/bootstrap.min.css">
+    <link rel="stylesheet" href="/public/styles/main.css">
+    <script src="/public/js/angular.min.js" type="text/javascript"></script>
   </head>
   <body ng-controller="mainController as mainCtrl" ng-cloak>
     <div class="container">
@@ -45,8 +45,8 @@
         </table>
       </div>
     </div>
-    <script src="/js/js-search.min.js" type="text/javascript"></script>
-    <script src="/js/underscore-min.js" type="text/javascript"></script>
-    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="/public/js/js-search.min.js" type="text/javascript"></script>
+    <script src="/public/js/underscore-min.js" type="text/javascript"></script>
+    <script src="/public/js/app.js" type="text/javascript"></script>
   </body>
 </html>
