--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
     </div>
     <script src="js-search.min.js" type="text/javascript"></script>
     <script src="underscore-min.js" type="text/javascript"></script>
-    <script src="js/app.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
